Remove position tracking from solve. Has no effect. Attempting to style cell value to align in center.

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -34,5 +34,8 @@ body {
 }
 
 .cell-value {
+  display: inline-block;
   position: relative;
+  font-size: 2em;
+  margin: auto;
 }
